@@ -1,11 +1,9 @@
 package net.minecraft.server.packs.resources;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -17,9 +15,11 @@ public interface ResourceManager extends ResourceProvider {
 
     boolean hasResource(ResourceLocation var1);
 
-    List<Resource> getResources(ResourceLocation var1) throws IOException;
+    List<ResourceThunk> getResourceStack(ResourceLocation var1) throws IOException;
 
-    Collection<ResourceLocation> listResources(String var1, Predicate<String> var2);
+    Map<ResourceLocation, ResourceThunk> listResources(String var1, Predicate<ResourceLocation> var2);
+
+    Map<ResourceLocation, List<ResourceThunk>> listResourceStacks(String var1, Predicate<ResourceLocation> var2);
 
     Stream<PackResources> listPacks();
 
@@ -28,7 +28,7 @@ public interface ResourceManager extends ResourceProvider {
 
         @Override
         public Set<String> getNamespaces() {
-            return ImmutableSet.of();
+            return Set.of();
         }
 
         @Override
@@ -42,13 +42,18 @@ public interface ResourceManager extends ResourceProvider {
         }
 
         @Override
-        public List<Resource> getResources(ResourceLocation param0) {
-            return ImmutableList.of();
+        public List<ResourceThunk> getResourceStack(ResourceLocation param0) throws IOException {
+            throw new FileNotFoundException(param0.toString());
         }
 
         @Override
-        public Collection<ResourceLocation> listResources(String param0, Predicate<String> param1) {
-            return ImmutableSet.of();
+        public Map<ResourceLocation, ResourceThunk> listResources(String param0, Predicate<ResourceLocation> param1) {
+            return Map.of();
+        }
+
+        @Override
+        public Map<ResourceLocation, List<ResourceThunk>> listResourceStacks(String param0, Predicate<ResourceLocation> param1) {
+            return Map.of();
         }
 
         @Override
